Creating homelist component with hardcoded data

--- a/app_public/src/index.html
+++ b/app_public/src/index.html
@@ -7,8 +7,13 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <link rel="stylesheet" href="assets/stylesheets/bootstrap.min.css">
+  <link rel="stylesheet" href="assets/stylesheets/font-awesome.min.css">
+  <link rel="stylesheet" href="assets/stylesheets/style.css">
+
 </head>
 <body>
-  <app-root>Loading...</app-root>
+  <app-home-list>Loading...</app-home-list>
 </body>
 </html>
